@@ -4,6 +4,7 @@
       - Added: ability to change shipping address in Packeta order detail in administration
       - Added: visualization of validated address in Packeta order detail
       - Fixed: order list column selection reset button now shows all columns on click
+      - Added: max COD limit for each pricing rule
 
 2.2.2 - Added: email template variables
       - Added: order grid filtering and sorting by order creation
